# KaraKara

./: .dockerignore  .env  .env._base  .env._local  .env._production  .env._rsync  .env.example  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .travis.yml  Makefile  README.md  README.txt  SystemSetup.md  Tutorial.md  Vagrantfile  Vagrantfile_.sh  compose.yml  docker-compose.event.yml  docker-compose.ps1  docker-compose.pytest.yml  docker-compose.test.yml  docker-compose.yml  karakara.Dockerfile  karakara.Dockerfile.sql  karakara.nginx.conf  karakara.service  make.ps1  vagrant_bootstrap.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
admindashboard/: Makefile  README.md  logstash.conf  logstash_elasticsearch_template.json  multi_input_output_example.txt
api_edit/: .dockerignore  Dockerfile  Makefile  app.py  compose.test.yml  pyproject.toml
api_edit/edit/: app.py  config.py  index.html  model.py  responses.py
api_edit/tests/: conftest.py
api_edit/tests_integration/: conftest.py  test_app.py
api_queue/: .gitignore  .mypy.ini  Dockerfile  Makefile  README.md  analytics.py  compose.yml  docker-compose.yml  mosquitto.conf  pyproject.toml  pytest.ini  requirements.test.txt  requirements.txt
api_queue/api_queue/: _utils.py  api_types.py  background_tasks.py  login_manager.py  queue.py  queue_manager.py  queue_model.py  queue_reorder.py  queue_updated_actions.py  queue_validation.py  server.py  settings_manager.py  test_queue.py  track_manager.py  type_parsers.py
api_queue/tests/: conftest.py  test_app.py  test_background_tasks.py  test_login_manager.py  test_queue_manager.py  test_queue_model.py  test_queue_reorder.py  test_queue_validation.py  test_settings_manager.py  tracks.json
browser2/: .gitignore  .parcelrc  Dockerfile  README.md  TODO.md  jest.config.js  package-lock.json  package.json  tsconfig.json
browser3/: .gitignore  .prettierignore  Dockerfile  README.md  biome.json  cypress.config.ts  eslint.config.js  fetch-fixtures.sh  index.html  package-lock.json  package.json  rsbuild.config.ts  tsconfig.json  update-version.sh  vite.config.ts  vitest.config.ts
community2/: README.md  index.html  queue_view.html  tracks.html
comunity/: README.md
dashboard/: Dockerfile  README.md  admindashboard.html  example_template.txt
dnsserver/: README.rst  constant-dns
docker/: nginx.conf  python.Dockerfile
docs/: 10year_notes.md  QueueSettings.md  architecture.xml  booth-box.md  education.md  for-admins.md  for-contributors.md  for-developers.md  for-event-runners.md  for-moderators.md  for-sysadmins.md  getting-started.md  history.md
frontend/: Caddyfile
images/: architecture.xml
lint/: Cargo.toml  Dockerfile  README.md
lint/src/: lib.rs  main.rs  types.rs
lint/src/rules/: library_capitalisation.rs  mod.rs  subtitles_brackets.rs  subtitles_characters.rs  subtitles_chronological.rs  subtitles_exists.rs  subtitles_newlines.rs  subtitles_random_topline.rs  subtitles_spacing.rs  tags_banned.rs  tags_duration.rs  tags_lowercase_keys.rs  tags_lowercase_values.rs  tags_required.rs  tags_source.rs  tags_use.rs  track_aspect_ratio.rs  track_duration.rs  track_hardsubs.rs  track_redundant_audio.rs  track_vocaltrack.rs
media/: get_example_media.py
mediaserver/: .gitignore  Makefile  README.rst  README.txt  nginx.conf  nginx.conf.default
mqtt/: Dockerfile  mosquitto.conf  ws.acl
nginx/: Dockerfile  README.md  nginx.conf
openapi/: Makefile  components.yaml  extract-schemas.js  openapi-lint.yaml  openapi-misc.yaml  openapi-room.yaml  openapi.yaml
player/: .gitignore  API.md  Dockerfile  Makefile  README.md  demomode.js  jquery.min.js  lib.js  player.css  player.html  player.js
player2/: .babelrc  .gitignore  Dockerfile  README.md  README.txt  TODO.md  index.html  package-lock.json  package.json  rollup.config.js  tsconfig.json
player3/: .gitignore  .prettierignore  Dockerfile  README.md  biome.json  eslint.config.js  index.html  package-lock.json  package.json  rsbuild.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
postgres/: Dockerfile  karakara.sql
processmedia/: .gitignore  Makefile  README.md  README.txt  Spec.txt  encode.sh  encode_all.sh  files  processmedia.py  todo.md  todo.txt
processmedia2/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  _main.py  cleanup_media.py  config.docker.json  config.json.dist  dependencies.apt.txt  dependencies.brew.txt  dependencies.python.txt  docker-compose.dev.yml  docker-compose.ps1  docker-compose.sh  docker-compose.yml  (+19 more)
processmedia3/: .mypy.ini  Dockerfile  Makefile  README.md  get_example_media.py  logging.config.json  main.py  pyproject.toml  requirements.test.txt
processmedia3/cmds/: cleanup.py  encode.py  export.py  lint.py  scan.py  view.py
processmedia3/lib/: css_placeholder_lqip.py  encoders.py  file_abstraction.py  hash_file.py  kktypes.py  source.py  subtitle_processor.py  tag_processor.py  target.py  track.py
processmedia3/pm3/: __main__.py
processmedia3/pm3/cmds/: cleanup.py  encode.py  export.py  lint.py  scan.py  status.py  view.py
processmedia3/pm3/lib/: encoders.py  file_abstraction.py  kktypes.py  media_meta.py  source.py  subtitle_processor.py  tag_processor.py  target.py  track.py  types.py
processmedia3/tests/: test_list_changes.py  test_main.py  test_subtitle_processor.py
processmedia3/tests/source/: test1.srt  test1.txt  test2.ssa  test2.toml  test2.txt
processmedia3/tests/subs/: blink_gap.srt  blink_gap.vtt  intro_gap.srt  intro_gap.vtt  line_gap.srt  line_gap.vtt  multiline.srt  multiline.vtt  repeat_gap.srt  repeat_gap.vtt  verse_gap.srt  verse_gap.vtt
upload/: .dockerignore  .prettierignore  Dockerfile  README.md  biome.json  index.html  package-lock.json  package.json  pyproject.toml  rsbuild.config.ts  tsconfig.json  upload.py
upload/backend/: __init__.py
upload/frontend/: App.css  App.tsx  env.d.ts  index.tsx
upload/frontend/components/: InfoBox.tsx  UploadForm.tsx  WipBox.tsx
upload/frontend/screens/: index.tsx
upload/static/: index.html  script.js  style.css
(+736 files in other folders)
