[project]
name = "api_queue"
version = "0.0.0"
readme = "README.md"
dependencies = [
	"sanic",  # ~= 23.12
	"sanic-ext",  # ~= 23.12
	"sanic-openapi",  # ~= 21.12
	"ujson",  # ~= 5.9
	"aiomqtt",  #  ~= 2.0
	"pytimeparse2",  # ~= 1.1
	"dateparser",
	"setuptools",  # ~= 75.5
	"pydantic",  # To be replaced with msgspec?
]

[project.optional-dependencies]
test = [
	"mypy",  # ~= 1.8
	"pytest",  # ~= 8.0
	"pytest-asyncio",  #  ~= 0.23
	"pytest-mypy",
	"sanic-testing",  #  ~= 23.12
	"types-ujson", #  ~= 5.9
	"types-dateparser",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = "mypy-sanic_ext.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--doctest-modules -p no:cacheprovider"  # --mypy # mypy slows my flow down
filterwarnings = [
	"ignore:The `schema` method is deprecated.*",
	"ignore:Pydantic serializer warnings",
	"ignore:Parsing dates involving a day of month without a year specified is ambiguious",
	"ignore:websockets.legacy is deprecated",
	"ignore:pkg_resources is deprecated as an API",
	"ignore:Use 'content=<...>' to upload raw bytes/text content",
]

[tool.black]
line-length = 120

[tool.pyright]
reportUnusedCallResult = false
reportUninitializedInstanceVariable = false
reportUnreachable = false
reportUnannotatedClassAttribute = false
