[project]
name = "api_queue"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"sanic ~= 25.3",
	"sanic-ext ~= 24.12",
	"sanic-openapi ~= 21.12",
	"ujson ~= 5.11",
	"aiomqtt ~= 2.4",
	"pytimeparse2 ~= 1.7",
	"dateparser ~= 1.2",
	"setuptools ~= 80.9",
	"pydantic ~= 2.11",  # To be replaced with msgspec?
	"ua_parser ~= 1.0.1",
]

[project.optional-dependencies]
test = [
	"mypy ~= 1.18",
	"pytest ~= 8.4",
	"pytest-asyncio ~= 1.2",
	"pytest-mypy ~= 1.0",
	"sanic-testing ~= 24.6",
	"types-ujson ~= 5.10",
	"types-dateparser ~= 1.2",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = "mypy-sanic_ext.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--doctest-modules -p no:cacheprovider"  # --mypy # mypy slows my flow down
filterwarnings = [
	"ignore:The `schema` method is deprecated.*",
	"ignore:Pydantic serializer warnings",
	"ignore:Parsing dates involving a day of month without a year specified is ambiguious",
	"ignore:websockets.legacy is deprecated",
	"ignore:pkg_resources is deprecated as an API",
	"ignore:Use 'content=<...>' to upload raw bytes/text content",
]

[tool.black]
line-length = 120

[tool.pyright]
reportUnusedCallResult = false
reportUninitializedInstanceVariable = false
reportUnreachable = false
reportUnannotatedClassAttribute = false
