[project]
name = "api_queue"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"sanic",
	"sanic-ext",
	"sanic-openapi",
	"ujson",
	"aiomqtt",
	"pytimeparse2",
	"dateparser",
	"setuptools",
	"pydantic",  # To be replaced with msgspec?
]

[dependency-groups]
dev = [
    "mypy",
	"pytest",
	"pytest-asyncio",
	"pytest-mypy",
	"ruff",
	"sanic-testing",
	"types-tqdm",
	"types-ujson",
	"types-dateparser",
]

[project.optional-dependencies]
analytics = [
    "ua_parser",
	"tqdm",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = "mypy-sanic_ext.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sanic_testing.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytimeparse2.*"
ignore_missing_imports = true


[tool.pytest]
addopts = ["--doctest-modules"]  #  "--mypy", "--ruff", "--ruff-format"
asyncio_mode = "auto"
filterwarnings = [
	"ignore:The `schema` method is deprecated.*",
	"ignore:Pydantic serializer warnings",
	"ignore:Parsing dates involving a day of month without a year specified is ambiguious",
	"ignore:websockets.legacy is deprecated",
	"ignore:pkg_resources is deprecated as an API",
	"ignore:Use 'content=<...>' to upload raw bytes/text content",
]

[tool.ruff]
line-length = 120

[tool.pyright]
reportUnusedCallResult = false
reportUninitializedInstanceVariable = false
reportUnreachable = false
reportUnannotatedClassAttribute = false
reportUnusedParameter = false
