[package]
name = "kk-lint"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_borrow = "0.9"
rayon = "1.12"
clap = { version = "4.6", features = ["derive"] }
indicatif = "0.17"
phf = { version = "0.11", features = ["macros"] }
axum = { version = "0.7", optional = true }
tokio = { version = "1.52", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[features]
default = ["server"]
server = ["axum", "tokio", "tower-http"]

[[bin]]
name = "kk-lint"
path = "src/main.rs"

[lib]
name = "kk_lint"
path = "src/lib.rs"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
#expect_used = "deny"
