[project]
name = "processmedia3"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"tqdm ~= 4.67",
	"pillow ~= 12.0",
	"dateparser ~= 1.2",
	"Brotli ~= 1.1",
	"requests ~= 2.32",
	"typed-argument-parser ~= 1.11",
]

[dependency-groups]
dev = [
	"mypy ~= 1.15",
	"pytest ~= 9.0",
	"ruff ~= 0.14",
	"types-tqdm ~= 4.67",
	"types-dateparser ~= 1.2",
	"types-requests ~= 2.32",
	"inotify ~= 0.2",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = "mypy-tqdm.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "brotli.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "inotify.*"
ignore_missing_imports = true

[tool.pytest]
strict = true
addopts = ["--doctest-modules"]
filterwarnings = [
	"ignore:Parsing dates involving a day of month without a year specified is ambiguious",
]

[tool.ruff]
line-length = 120

[tool.pyright]
reportUnusedCallResult = false
