[project]
name = "processmedia3"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"tqdm ~= 4.67",
	"pillow ~= 12.0",
	"dateparser ~= 1.2",
	"Brotli ~= 1.1",
	"requests ~= 2.32",
	"typed-argument-parser ~= 1.11",
	"inotify ~= 0.2",
]

[tool.uv]
package = true

[project.scripts]
pm3 = "pm3.__main__:entry_point"
pm3-subtitle-processor = "pm3.lib.subtitle_processor:main"
pm3-encoder = "pm3.lib.encoders:main"

[dependency-groups]
dev = [
	"mypy ~= 1.15",
	"pytest ~= 9.0",
	"ruff ~= 0.14",
	"types-tqdm ~= 4.67",
	"types-dateparser ~= 1.2",
	"types-requests ~= 2.32",
	"datamodel-code-generator ~= 0.25",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = "brotli.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "inotify.*"
ignore_missing_imports = true

[tool.pytest]
strict = true
addopts = ["--doctest-modules"]
filterwarnings = [
	"ignore:Parsing dates involving a day of month without a year specified is ambiguious",
]

[tool.ruff]
line-length = 120

[tool.pyright]
reportUnusedCallResult = false

[tool.datamodel-codegen]
input = "../openapi/components.yaml"
input-file-type = "openapi"
output = "pm3/lib/types.py"
output-model-type = "typing.TypedDict"
use-standard-collections = true
use-schema-description = true
snake-case-field = true
target-python-version = "3.14"
field-constraints = true
collapse-root-models = true
disable-timestamp = true
formatters = ["ruff-check", "ruff-format"]
