[project]
name = "upload"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"sanic ~= 25.3",
	"ujson ~= 5.11",
	"aiofiles",
]

[project.optional-dependencies]
test = [
	"mypy ~= 1.18",
	"pytest ~= 8.4",
	"pytest-asyncio ~= 1.2",
	"pytest-mypy ~= 1.0",
	"sanic-testing ~= 24.6",
	"types-ujson ~= 5.10",
	"types-dateparser ~= 1.2",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = "mypy-sanic_ext.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sanic_testing.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--doctest-modules -p no:cacheprovider"  # --mypy # mypy slows my flow down
filterwarnings = [
]

[tool.black]
line-length = 120

[tool.pyright]
reportUnusedCallResult = false
reportUninitializedInstanceVariable = false
reportUnreachable = false
reportUnannotatedClassAttribute = false
reportUnusedParameter = false
